--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -92,6 +92,7 @@ jobs:
     - name: Building
       run: |
         PATH=~/bin:$PATH
+        source ${GITHUB_WORKSPACE}/${{ github.event.inputs.DEVICE_NAME }}.sh
         cd ${{ steps.pwd.outputs.pwd }}
         export ALLOW_MISSING_DEPENDENCIES=true
         source build/envsetup.sh
