--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -100,12 +100,10 @@ jobs:
         make clean
         make recoveryimage -j$(nproc --all)        
       
-    - name: Upload to Release
-      uses: softprops/action-gh-release@v1
+    - name: Upload articact
+      uses: actions/upload-artifact@v2
       with:
-        files: workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery.img
-        name: ${{ github.event.inputs.DEVICE_NAME }}-${{ github.run_id }}
-        tag_name: ${{ github.run_id }}
-        body: Recovery for ${{ github.event.inputs.DEVICE_NAME }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        path: |
+          fox_11.0/out/target/product/${{ github.event.inputs.DEVICE_PATH }}/*.img
+          fox_11.0/out/target/product/${{ github.event.inputs.DEVICE_PATH }}/*.zip
+        name: ${{ github.event.inputs.DEVICE_NAME }}
